--- a/client/src/components/LeftSidebar/LeftSidebar.module.scss
+++ b/client/src/components/LeftSidebar/LeftSidebar.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;  
   background-color:$background-secondary;
-  border-radius: 10px;  
+  border-radius: $border-radius-medium-big;  
   opacity: 0.9;
   border: 3px solid $twelfth;
 
@@ -18,7 +18,7 @@
   .iconWrapper {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: $margin-large;
   }
 
   .iconWrapper img {
@@ -30,10 +30,10 @@
     background-position: center;
   }
   .menuForm {
-    padding: 20px 10px;
+    padding: $padding-large $padding-medium;
     width: 80%;
-    margin-left: 10px;
-    border-radius: 10px;
+    margin-left: $margin-medium;
+    border-radius: $border-radius-medium-big;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -41,7 +41,7 @@
 
   .menuForm input {
     width: 95%;
-    padding: 20px 5px;
+    padding: $padding-large $padding-small;
   }
 
   a {
