--- a/client/src/components/MainContent/MainContent.module.scss
+++ b/client/src/components/MainContent/MainContent.module.scss
@@ -2,10 +2,10 @@
 
 .mainBox {
   // margin-top: 180px;
-  border-radius: 10px;
+  border-radius: $border-radius-medium-big;
   width: 99%;
   height: 100%;
-  padding: 0 10px;
+  padding: 0 $padding-medium;
   overflow-y: auto;
   overflow-x: hidden;
   background-color: $background-secondary;
@@ -22,7 +22,7 @@
 
 .mainBox::-webkit-scrollbar-thumb {
   background-color: $background-sixth;
-  border-radius: 10px;
+  border-radius: $border-radius-medium-big;
   border: 2px solid $background-fifth;
 }
 
