--- a/client/src/components/RightSidebar/RightSidebar.module.scss
+++ b/client/src/components/RightSidebar/RightSidebar.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   max-height: 52vh;
   background-color: $background-secondary;
-  border-radius: 10px;
+  border-radius: $border-radius-medium-big;
   overflow-y: auto; 
   transition: height 1s ease;   
   border: 3px solid $twelfth;
@@ -20,7 +20,7 @@
 
   &::-webkit-scrollbar-thumb {
     background-color: $background-secondary;
-    border-radius: 10px;
+    border-radius: $border-radius-medium-big;
   }
 
   &::-webkit-scrollbar-thumb:hover {
@@ -37,7 +37,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 10px;
-  padding: 10px;
+  padding: $padding-medium;
   width: 100%;
 }
 
@@ -51,7 +51,7 @@
   color: $secondary;
   border: solid 1px $secondary;
   border-radius: 20px;
-  padding: 5px;
+  padding: $padding-small;
   flex-grow: 1;
 
   &:hover {
@@ -61,13 +61,13 @@
   }
 }
 .toggleButton span {
-  margin-right: 10px;
+  margin-right: $margin-medium;
 }
 .toggleButton {
   color: $primary;
   font-size: $medium;
-  padding: 5px 10px;
-  border-radius: 10px;
+  padding: $padding-small $padding-medium;
+  border-radius: $border-radius-medium-big;
   background-color: $background-btn-fifth;
 }
 .toggleButton:hover {
@@ -98,7 +98,7 @@
   position: sticky;
   top: 0; 
   z-index: 10; 
-  padding: 5px 0;
+  padding: $padding-small 0;
   margin-top: 0;
   font-size: 1.5rem; 
   width: 100%;
