--- a/client/src/pages/ChatPage/NewMessageForm/NewMessageForm.module.scss
+++ b/client/src/pages/ChatPage/NewMessageForm/NewMessageForm.module.scss
@@ -3,14 +3,14 @@
 
 
 .NewMessageForm {
-  margin-top: 20px;
+  margin-top: $margin-large;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
-  background-color: #f1f1f1; /* Светлый серый фон */
-  border-radius: 10px;
+  padding: $padding-medium;
+  background-color: $nodle-black-100; /* Светлый серый фон */
+  border-radius: $border-radius-medium-big;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   width: 100%;
 }
@@ -20,7 +20,7 @@
   padding: 12px;
   border: 1px solid #ccc; /* Светло-серая граница */
   border-radius: 20px;
-  font-size: 14px;
+  font-size: $smaller;
   background-color: #e9e9e9; /* Более темный серый фон */
   outline: none;
   transition: border-color 0.3s ease;
@@ -36,12 +36,12 @@
 
 .NewMessageForm button {
   padding: 12px 18px;
-  margin-left: 10px;
+  margin-left: $margin-medium;
   border: none;
   border-radius: 20px;
   background-color: #8a8a8a; /* Темно-серый цвет кнопки */
   color: white;
-  font-size: 14px;
+  font-size: $smaller;
   cursor: pointer;
   transition: background-color 0.3s ease;
 
@@ -50,7 +50,7 @@
   }
 
   &:disabled {
-    background-color: #d3d3d3; /* Более светлый серый для отключенной кнопки */
+    background-color: $nodle-black-200; /* Более светлый серый для отключенной кнопки */
     cursor: not-allowed;
   }
 }
