--- a/client/src/pages/HomePage/HomePage.module.scss
+++ b/client/src/pages/HomePage/HomePage.module.scss
@@ -11,7 +11,7 @@
     display: flex;
     gap: 20px;
     border: 1px solid $fifth;
-    border-radius: 10px;
+    border-radius: $border-radius-medium-big;
     transition: transform 0.2s, box-shadow 0.2s;
 
     &:hover {
@@ -33,7 +33,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding: 20px 10px;
+    padding: $padding-large $padding-medium;
   }
 
   .newsContent h2 {
