--- a/client/src/pages/LoginPage/LoginPage.module.scss
+++ b/client/src/pages/LoginPage/LoginPage.module.scss
@@ -124,8 +124,8 @@
   position: relative;
   max-width: 470px;
   width: 100%;
-  border-radius: 12px;
-  padding: 20px 30px 120px;
+  border-radius: $border-radius-large;
+  padding: $padding-large $padding-largexl 120px;
   background: $background-thirteenth;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -185,7 +185,7 @@ form input {
   font-size: $normal;
   font-weight: $font-weight-normal;
   color: $ninth;
-  border-radius: 8px;
+  border-radius: $border-radius-medium;
   background: $primary;
   box-shadow: -10px -10px 14px rgba(255, 255, 255, 0.3),
     10px 10px 15px rgba(70, 70, 70, 0.15),
@@ -244,7 +244,7 @@ form input[type="submit"] {
   padding: 15px;
   background: $background-btn-sixth;
   color: $primary;
-  border-radius: 8px;
+  border-radius: $border-radius-medium;
   font-size: $medium;
   font-weight: $font-weight-semi-bold;
   cursor: pointer;
