--- a/client/src/pages/ProfilePage/GeneralInformation/generalInformation.module.scss
+++ b/client/src/pages/ProfilePage/GeneralInformation/generalInformation.module.scss
@@ -3,7 +3,7 @@
 .generalBox {
   display: flex; 
   flex-direction: column;
-  padding: 30px;
+  padding: $padding-largexl;
   background: linear-gradient(to bottom, #141e30, #243b55);
   color: #ffffff;
   border-radius: 15px;
@@ -15,14 +15,14 @@
   flex-direction: column;
   align-items: center;
   width: 200px;
-  margin-right: 30px;
+  margin-right: $margin-largexl;
 }
 
 .avatarSection {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: $margin-large;
 }
 
 .avatar {
@@ -30,7 +30,7 @@
   height: 150px;
   border-radius: 50%;
   object-fit: cover;
-  margin-bottom: 10px;
+  margin-bottom: $margin-medium;
   border: 3px solid #394a6d;
 }
 
@@ -45,15 +45,15 @@
 .userInfo {
   width: 100%;
   background-color: rgba(20, 30, 48, 0.8);
-  border-radius: 8px;
-  padding: 10px;
+  border-radius: $border-radius-medium;
+  padding: $padding-medium;
   color: #b0b0b0;
   font-size: 0.9rem;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .userInfo p {
-  margin: 5px 0;
+  margin: $margin-small 0;
 }
 
 .content {
@@ -62,9 +62,9 @@ display: flex;
 
 .form {
   width: 97%;
-  padding: 20px;
+  padding: $padding-large;
   background-color: rgba(20, 30, 48, 0.8);
-  border-radius: 10px;
+  border-radius: $border-radius-medium-big;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -76,9 +76,9 @@ display: flex;
 
 .input {
   width: 98%;
-  padding: 10px;
-  margin-bottom: 20px;
-  border-radius: 8px;
+  padding: $padding-medium;
+  margin-bottom: $margin-large;
+  border-radius: $border-radius-medium;
   background-color: #1c2a3e;
   border: 1px solid #394a6d;
   color: #ffffff;
@@ -100,8 +100,8 @@ display: flex;
   justify-content: space-around;
   background-color: #1c2a3e;
   padding: 15px;
-  border-radius: 8px;
-  margin-bottom: 20px;
+  border-radius: $border-radius-medium;
+  margin-bottom: $margin-large;
 }
 
 .profileMenu a {
@@ -118,13 +118,13 @@ display: flex;
 @media (max-width: 1024px) {
   .generalBox {
     flex-direction: column;
-    padding: 20px;
+    padding: $padding-large;
   }
 
   .sidebar {
     width: 100%;
     margin-right: 0;
-    margin-bottom: 20px;
+    margin-bottom: $margin-large;
   }
 
   .avatar {
@@ -156,7 +156,7 @@ display: flex;
 
   .profileMenu {
     flex-direction: column;
-    padding: 10px;
+    padding: $padding-medium;
   }
 }
 
@@ -168,7 +168,7 @@ display: flex;
 
   .sidebar {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: $margin-large;
   }
 
   .avatar {
@@ -182,7 +182,7 @@ display: flex;
   }
 
   .form {
-    padding: 10px;
+    padding: $padding-medium;
   }
 
   .label {
