--- a/client/src/pages/ProfilePage/Hobbies/Hobbies.module.scss
+++ b/client/src/pages/ProfilePage/Hobbies/Hobbies.module.scss
@@ -3,9 +3,9 @@
 .hobbiesBox {
   display: flex;
   flex-direction: column;
-  padding: 30px;
+  padding: $padding-largexl;
   background: linear-gradient(to bottom, #141e30, #243b55);
-  color: #ffffff;
+  color: $primary;
   border-radius: 15px;
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
 }
@@ -13,29 +13,29 @@
 .content {
   flex: 1;
   background-color: rgba(20, 30, 48, 0.8);
-  border-radius: 10px;
-  padding: 20px;
+  border-radius: $border-radius-medium-big;
+  padding: $padding-large;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .title {
   font-size: 1.8rem;
   margin-bottom: 1rem;
-  color: #ffffff;
+  color: $primary;
   text-align: center;
 }
 
 .section {
-  margin-bottom: 20px;
-  padding: 10px;
-  border-radius: 8px;
+  margin-bottom: $margin-large;
+  padding: $padding-medium;
+  border-radius: $border-radius-medium;
   background-color: rgba(30, 40, 60, 0.8);
 }
 
 .subtitle {
   font-size: 1.5rem;
-  margin-bottom: 10px;
-  color: #ffffff;
+  margin-bottom: $margin-medium;
+  color: $primary;
 }
 
 .hobbyList {
@@ -48,8 +48,8 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  padding: 10px;
-  border-radius: 8px;
+  padding: $padding-medium;
+  border-radius: $border-radius-medium;
   background-color: #1c2a3e;
   border: 1px solid #394a6d;
   transition: background-color 0.3s;
@@ -61,10 +61,10 @@
 
 .hobbyInput {
   width: 100%;
-  padding: 10px;
-  border-radius: 8px;
+  padding: $padding-medium;
+  border-radius: $border-radius-medium;
   background-color: #1c2a3e;
-  color: #ffffff;
+  color: $primary;
   border: 1px solid #394a6d;
   transition: border-color 0.3s;
 
@@ -75,18 +75,18 @@
 }
 
 .hobbyText {
-  color: #ffffff;
+  color: $primary;
   flex-grow: 1;
 }
 
 .addButton,
 .editButton,
 .removeButton {
-  margin-right: 10px;
+  margin-right: $margin-medium;
   padding: 12px 20px;
-  border-radius: 8px;
+  border-radius: $border-radius-medium;
   background-color: #3b4e7e;
-  color: #ffffff;
+  color: $primary;
   text-transform: uppercase;
   cursor: pointer;
   border: none;
