--- a/client/src/pages/ProfilePage/PlaceOfResidence/PlaceOfResidence.module.scss
+++ b/client/src/pages/ProfilePage/PlaceOfResidence/PlaceOfResidence.module.scss
@@ -3,9 +3,9 @@
 .residenceBox {
   display: flex;
   flex-direction: column;
-  padding: 30px;
+  padding: $padding-largexl;
   background: linear-gradient(to bottom, #141e30, #243b55);
-  color: #ffffff;
+  color: $primary;
   border-radius: 15px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
 }
@@ -13,36 +13,36 @@
 .content {
   flex: 1;
   background-color: rgba(20, 30, 48, 0.8);
-  border-radius: 10px;
-  padding: 20px;
+  border-radius: $border-radius-medium-big;
+  padding: $padding-large;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .currentResidence {  
     background: rgba(20, 30, 48, 0.8);
-    border-radius: 12px;
-    padding: 20px;
-    margin-bottom: 20px;
+    border-radius: $border-radius-large;
+    padding: $padding-large;
+    margin-bottom: $margin-large;
     box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3);
 }
 
 .title {
   font-size: 1.8rem;
   margin-bottom: 1rem;
-  color: #ffffff;
+  color: $primary;
 }
 
 .subtitle {
   font-size: 1.4rem;
   color: #b0b0b0;
-  margin-bottom: 10px;
+  margin-bottom: $margin-medium;
 }
 
 .residenceText {
   font-size: 1.2rem;
-  color: #ffffff;
+  color: $primary;
   margin-top: 8px;
-  font-weight: 500;
+  font-weight: $font-weight-medium;
 }
 
 .form {
@@ -64,18 +64,18 @@
 
 .input {
   width: 97%;
-  padding: 10px;
-  border-radius: 8px;
+  padding: $padding-medium;
+  border-radius: $border-radius-medium;
   background-color: #1c2a3e;
-  color: #ffffff;
+  color: $primary;
   border: 1px solid #394a6d;
 }
 
 .suggestions {
   position: absolute;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  background-color: $primary;
+  border: 1px solid $seventh;
+  border-radius: $border-radius-small;
   z-index: 1000;
   list-style: none;
   padding: 0;
@@ -83,7 +83,7 @@
 }
 
 .suggestions li {
-  padding: 10px;
+  padding: $padding-medium;
   cursor: pointer;
 }
 
@@ -94,7 +94,7 @@
 /* Media Queries for Responsive Design */
 @media (max-width: 1024px) {
   .residenceBox {
-    padding: 20px; 
+    padding: $padding-large; 
   }
 
   .title {
@@ -129,7 +129,7 @@
 
   .button {
     width: 100%; 
-    padding: 10px; 
+    padding: $padding-medium; 
   }
 
   .suggestions {
