--- a/client/src/pages/FriendsPage/FriendsPage.module.scss
+++ b/client/src/pages/FriendsPage/FriendsPage.module.scss
@@ -1,108 +1,181 @@
 @use "../../App.scss" as *;
 
-.rightMenu {
+.friendBox {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-height: 52vh;
-  background-color: $background-secondary;
-  border-radius: $border-radius-medium-big;
-  overflow-y: auto; 
-  transition: height 1s ease;   
-  border: 3px solid $twelfth;
-  &.expanded {    
-    max-height: 52vh;
-  }
-
-  &::-webkit-scrollbar {
-    width: 6px;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: $background-secondary;
-    border-radius: $border-radius-medium-big;
-  }
-
-  &::-webkit-scrollbar-thumb:hover {
-    background-color: $background-sixth;
-  }
-
-  &::-webkit-scrollbar-track {
-    background: transparent;
-  }
-}
-
-.friendItem {
-  display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  gap: 50px 20px;
+  padding: 0 20px;
   justify-content: space-between;
-  gap: 10px;
-  padding: $padding-medium;
-  width: 100%;
 }
 
-.friendLink {
+.friendCard {
+  position: relative;
+  min-width: 295px;
+  width: 20%;
+  height: 200px;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+  cursor: pointer;
+
+  @media (max-width: 1024px) and (min-width: 768px) {
+    width: 45%;
+  }
+
+  @media (max-width: 768px) {
+    width: 100%;
+    height: 180px;
+  }
+
+  &.flipped {
+    transform: rotateY(180deg);
+  }
+}
+
+.front,
+.back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border: 1px solid #cababa;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  h2 {
+    font-family: $primary-font;
+    font-size: $font-size-medium;
+  }
+}
+
+.back {
+  transform: rotateY(180deg);
+  background: linear-gradient(to right, rgb(90, 91, 92), rgb(105, 105, 218));
+}
+
+.inner {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 11vh;
+  width: 100%;
+  height: 200px;
+  text-align: center;
   gap: 10px;
-  text-decoration: none;
-  color: $secondary;
-  border: solid 1px $secondary;
-  border-radius: 20px;
-  padding: 5px;
-  flex-grow: 1;
+  padding-top: $padding-large;
+}
 
-  &:hover {
-    color: $background-btn-fifth;
-    transform: scale(1.1);
-    box-shadow: 0 0 15px rgba(83, 83, 83, 0.8), 0 0 25px rgba(52, 53, 53, 0.5);
+.front .inner h2 {
+  color: $secondary;
+  font-family: $heading-font;
+  font-weight: $font-weight-light;
+  font-size: $medium;
+}
+
+.front .inner h2::after {
+  content: "";
+  width: 4rem;
+  height: 2px;
+  position: absolute;
+  background: #c6d4df;
+  display: block;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  bottom: -0.75rem;
+}
+
+.friendPhoto {
+  width: 90%;
+  height: 80%;
+  object-fit: cover;
+  object-position: top;
+  border-radius: 20px;
+
+  @media (max-width: 1024px) and (min-width: 768px) {
+    width: 75%;
+    height: 75%;
+  }
+
+  @media (max-width: 768px) {
+    width: 70%;
+    height: 70%;
   }
 }
-.toggleButton span {
-  margin-right: $margin-medium;
-}
-.toggleButton {
+
+.link {
+  text-decoration: none;
   color: $primary;
   font-size: $medium;
-  padding: $padding-small $padding-medium;
-  border-radius: $border-radius-medium-big;
-  background-color: $background-btn-fifth;
-}
-.toggleButton:hover {
-  background-color: $background-btn-hover-fifth;
+  font-weight: bold;
+  margin-bottom: 12px;
+  display: inline-block;
+  transition: color 0.3s, transform 0.2s;
+
+  &:hover {
+    color: #d1c4ff;
+    transform: scale(1.1);
+  }
+
+  @media (max-width: 768px) {
+    font-size: $normal;
+  }
 }
 
-.friendName {
+.infoFriend {
+  margin: 0;
+}
+
+.clickToFlip {
+  font-size: $normal;
+  margin-top: $margin-medium;
+  font-weight: $font-weight-light;
+  color: #c0c0c0;
+  transition: color 0.3s;
+
+  &:hover {
+    color: $primary;
+  }
+
+  @media (max-width: 768px) {
+    font-size: $smaller;
+  }
+}
+
+.searchContainer {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  margin: 20px 0;
+
+  @media (max-width: 768px) {
+    margin: 15px 0;
+  }
 }
 
-.friendName,
-.lastName p {
-  font-size: $large;
-}
+.searchInput {
+  width: 50%;
+  padding: $padding-medium;
+  border-radius: 25px;
+  border: 1px solid #cababa;
+  background-color: #363a3d;
+  outline: none;
+  font-size: $normal;
+  transition: all 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
-.deleteButton {
-  margin-left: auto;
-}
+  &::placeholder {
+    color: $secondary;
+  }
 
-.friendAvatar {
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-}
+  &:focus {
+    border-color: #6a5acd;
+    box-shadow: 0 2px 8px rgba(106, 90, 205, 0.3);
+  }
 
-.friendsTitle {
-  position: sticky;
-  top: 0; 
-  z-index: 10; 
-  padding: $padding-small 0;
-  margin-top: 0;
-  font-size: 1.5rem; 
-  width: 100%;
-  background-color: $background-secondary;
-  text-align: center;
+  @media (max-width: 768px) {
+    width: 80%;
+    font-size: $smaller;
+  }
 }
 
