--- a/client/src/pages/HomePage/HomePage.module.scss
+++ b/client/src/pages/HomePage/HomePage.module.scss
@@ -4,8 +4,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
-
+  gap: 20px;  
+  @media   (max-width: 767px) {
+    width: 93vw;      
+   }
+  
   .newsCard {
     width: 97%;
     display: flex;
@@ -13,6 +16,9 @@
     border: 1px solid $fifth;
     border-radius: 10px;
     transition: transform 0.2s, box-shadow 0.2s;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
 
     &:hover {
       transform: scale(1.05);
@@ -24,9 +30,14 @@
   }
 
   .newsImage {
-    max-width: 300px;
+    max-width: 30vw;
+    max-height: 35vh;
     height: auto;
     border-radius: 15px;
+    @media   (max-width: 767px) {
+      max-width: 20vw;
+      max-height: 25vh;      
+     }
   }
 
   .newsContent {
@@ -37,13 +48,19 @@
   }
 
   .newsContent h2 {
-    font-size: $huge;    
+    font-size: $huge;  
+    @media   (max-width: 767px) {
+      font-size: $larger;      
+      }  
   }
 
   .newsContent p {
     font-size: $large;
     line-height: 1.5;
     color: $seventh;
+    @media   (max-width: 767px) {
+      font-size: $normal;      
+      } 
   }
 
   .date {
