working with comments

--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -163,7 +163,7 @@ header {
     height: 80px;
     border-radius: 50%;
     cursor: pointer;
-    margin-left: 10px;
+    margin-left: $margin-medium;
 
     @media (min-width: 768px) {
       width: 150px;
