--- a/client/src/pages/ProfilePage/GeneralInformation/generalInformation.module.scss
+++ b/client/src/pages/ProfilePage/GeneralInformation/generalInformation.module.scss
@@ -1,6 +1,8 @@
 @use "../../../App.scss" as *;
 
 .generalBox {
+margin: 10px 0;
+  // width: 80vw;
   display: flex; 
   flex-direction: column;
   padding: $padding-largexl;
@@ -32,11 +34,13 @@
   object-fit: cover;
   margin-bottom: $margin-medium;
   border: 3px solid #394a6d;
+
 }
 
 .avatarInput {
   display: none;
 }
+
 
 .avatarSection:hover .avatarInput {
   display: inline;
@@ -58,6 +62,11 @@
 
 .content {
 display: flex;
+@media (max-width: 1024px) {
+ flex-direction: column;
+ 
+ 
+}
 }
 
 .form {
@@ -119,6 +128,7 @@ display: flex;
   .generalBox {
     flex-direction: column;
     padding: $padding-large;
+    width: 80vw;
   }
 
   .sidebar {
@@ -128,8 +138,8 @@ display: flex;
   }
 
   .avatar {
-    width: 120px;
-    height: 120px;
+    width: 200px;
+    height: 180px;
   }
 
   .userInfo {
@@ -164,6 +174,9 @@ display: flex;
 @media (max-width: 767px) {
   .generalBox {
     padding: 15px;
+    width: 91vw;
+    height: 100%;
+    align-items: center;
   }
 
   .sidebar {
@@ -172,7 +185,7 @@ display: flex;
   }
 
   .avatar {
-    width: 100px;
+    width: 150px;
     height: 100px;
   }
 
@@ -183,6 +196,7 @@ display: flex;
 
   .form {
     padding: $padding-medium;
+    width: 70vw;
   }
 
   .label {
