--- a/client/src/pages/ProfilePage/ProfileMenu.module.scss
+++ b/client/src/pages/ProfilePage/ProfileMenu.module.scss
@@ -5,10 +5,16 @@
   justify-content: center;
   width: 100%;
   margin: $margin-largexl;
+
+  // @media (max-width: 768px) {
+  //   height:  70vh;
+   
+  // }
 }
 
 .menu {
   display: flex;
+  flex-wrap: wrap;
   gap: 15px;
   list-style: none;
   padding: 0;
