--- a/client/src/pages/UserPage/UserPage.module.scss
+++ b/client/src/pages/UserPage/UserPage.module.scss
@@ -6,12 +6,13 @@
   align-items: center;
   box-sizing: border-box;
   gap: 25px;
-  height: 80vh;
+  height: 90vh;
   padding: 40px;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 18px;
   backdrop-filter: blur(10px);
   box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
+
 
   &_title {
     font-size: 2.5rem;
@@ -22,6 +23,10 @@
     letter-spacing: 1px;
     text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
   }
+  @media (max-width: 767px) {
+    width: 94vw;
+
+    }
 }
 
 .userContent {
