--- a/client/src/pages/UsersPage/UsersPage.module.scss
+++ b/client/src/pages/UsersPage/UsersPage.module.scss
@@ -7,25 +7,36 @@
   padding: 0 20px;
   justify-content: space-between;
   // height: 40vh;
+  width: 82vw;
+
+  @media (max-width: 767px) {
+    justify-content: center;
+    width: 90vw;
+  }
+  
 }
 
 .userCard {
   position: relative;
-  min-width: 295px;
-  width: 20%;
+  flex-basis: calc((100% - 60px) / 4); // 4 карточки в ряду на больших экранах
+  max-width: calc((100% - 60px) / 4); 
   height: 200px;
   transform-style: preserve-3d;
   transition: transform 0.6s;
   cursor: pointer;
 
   @media (max-width: 1024px) and (min-width: 768px) {
-    width: 45%;
+    // width: 45%;
+    flex-basis: calc((100% - 60px) / 3); // 4 карточки в ряду на больших экранах
+    max-width: calc((100% - 60px) / 3); 
   }
 
+
   // Styles for mobile screens
-  @media (max-width: 768px) {
-    width: 100%;
-    height: 180px;
+  @media (max-width: 767px) {
+    flex-basis: calc((100% - 20px) / 1); // 4 карточки в ряду на больших экранах
+  max-width: calc((100% - 20px) / 1); 
+  height: 300px;
   }
 
   &.flipped {
@@ -102,8 +113,8 @@
 
   // Style for mobile screens
   @media (max-width: 768px) {
-    width: 70%;
-    height: 70%;
+    width: 90%;
+    height: 80%;
   }
 }
 
