--- a/client/src/pages/ProfilePage/GeneralInformation/generalInformation.module.scss
+++ b/client/src/pages/ProfilePage/GeneralInformation/generalInformation.module.scss
@@ -28,8 +28,8 @@ margin: 10px 0;
 }
 
 .avatar {
-  width: 150px;
-  height: 150px;
+  width: 350px;
+  height: 300px;
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: $margin-medium;
@@ -62,15 +62,18 @@ margin: 10px 0;
 
 .content {
 display: flex;
-@media (max-width: 1024px) {
- flex-direction: column;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+// @media (max-width: 1024px) {
+//  flex-direction: column;
  
  
-}
+// }
 }
 
 .form {
-  width: 97%;
+  width:80vw;
   padding: $padding-large;
   background-color: rgba(20, 30, 48, 0.8);
   border-radius: $border-radius-medium-big;
@@ -137,10 +140,10 @@ display: flex;
     margin-bottom: $margin-large;
   }
 
-  .avatar {
-    width: 200px;
-    height: 180px;
-  }
+  // .avatar {
+  //   width: 200px;
+  //   height: 180px;
+  // }
 
   .userInfo {
     font-size: 0.85rem;
@@ -175,7 +178,6 @@ display: flex;
   .generalBox {
     padding: 15px;
     width: 91vw;
-    height: 100%;
     align-items: center;
   }
 
@@ -185,8 +187,8 @@ display: flex;
   }
 
   .avatar {
-    width: 150px;
-    height: 100px;
+    width: 250px;
+    height: 200px;
   }
 
   .userInfo {
