--- a/client/src/pages/ProfilePage/Hobbies/Hobbies.module.scss
+++ b/client/src/pages/ProfilePage/Hobbies/Hobbies.module.scss
@@ -1,6 +1,7 @@
 @use "../../../App.scss" as *;
 
 .hobbiesBox {
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   padding: $padding-largexl;
@@ -8,6 +9,9 @@
   color: $primary;
   border-radius: 15px;
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+  width: 80vw;
+  align-items: center;
+  justify-content: center;
 }
 
 .content {
@@ -16,6 +20,7 @@
   border-radius: $border-radius-medium-big;
   padding: $padding-large;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+  width: 70vw;
 }
 
 .title {
@@ -109,4 +114,24 @@
 .editButton {
   margin-top: 2rem;
   align-self: flex-start;
+}
+
+
+
+/* Media Queries for Responsive Design */
+@media (max-width: 1024px) {
+
+  }
+.content {
+
+}
+
+@media (max-width: 767px) {
+  .hobbiesBox {
+width: 88vw;
+  }
+  
+  .content {
+    width: 75vw;
+  }
 }
