--- a/client/src/pages/ProfilePage/PhotoLibrary/PhotoLibrary.module.scss
+++ b/client/src/pages/ProfilePage/PhotoLibrary/PhotoLibrary.module.scss
@@ -1,8 +1,9 @@
 @use "../../../App" as *;
 
 .galleryPage {
-  margin: 0 auto;
-  width: 100vh;
+  display: flex;
+  flex-direction: column;
+  width: 90vw;
   text-align: center;
   color: $primary;
 
@@ -31,7 +32,7 @@
     align-items: center;
 
     img {
-      width: 700px;
+      width: 40vw;
       height: auto;
       max-height: 500px;
       object-fit: cover;
