--- a/client/src/pages/ProfilePage/Workplace/Workplace.module.scss
+++ b/client/src/pages/ProfilePage/Workplace/Workplace.module.scss
@@ -1,6 +1,7 @@
 @use "../../../App.scss" as *;
 
 .workplaceBox {
+  margin: 10px 0;
   display: flex;
   flex-direction: column;
   padding: $padding-largexl;
@@ -8,6 +9,9 @@
   color: $primary;
   border-radius: 15px;
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+  width: 95%;
+  // align-items: center;
+  align-items: baseline;
 }
 
 .content {
@@ -16,6 +20,27 @@
   border-radius: $border-radius-medium-big;
   padding: $padding-large;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+  width: 92%;
+}
+
+
+@media (max-width: 1024px) {
+  .workplaceBox {
+    width: 80vw;
+  }
+  
+  .content {
+    width: 65vw;
+  }
+}
+@media (max-width: 767px) {
+  .workplaceBox {
+    width: 88vw;
+  }
+  
+  .content {
+    width: 70vw;
+  }
 }
 
 .title {
