--- a/client/src/pages/GroupPage/GroupPage.module.scss
+++ b/client/src/pages/GroupPage/GroupPage.module.scss
@@ -14,15 +14,43 @@
 
 .groupHeader {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: nowrap; /* Забороняємо перенесення елементів */
   gap: 10px;
-  overflow-x: auto;
-  width: 50vw;
-  height: 300px;
+  overflow-x: auto; /* Додаємо горизонтальну прокрутку */
+  width: 50vw; /* Встановлюємо ширину */
+  height: 35vh; /* Фіксована висота */
   margin-bottom: 50px;
   padding: 20px 10px;
   margin: 0 auto;
+
+  /* Стилізація скролу */
+  scrollbar-width: thin; /* Тонкий скрол для Firefox */
+  scrollbar-color: #888 transparent; /* Колір для Firefox */
+
+  &::-webkit-scrollbar {
+    height: 8px; /* Висота скролу */
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #888; /* Колір скролу */
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Колір при наведенні */
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent; /* Прозорий фон доріжки */
+  }
+
+  @media (max-width: 767px) {
+    width: 30vh; /* Для мобільних пристроїв */   
+    height: 25vh;
+    margin: 5px;
+  }
 }
+
 
 .groupLink {
   width: 80%;
@@ -53,12 +81,15 @@
 }
 
 .avatar {
-  width: 5vw;
+  width: 7vw;
   height: auto;
   object-fit: cover;
   border-radius: 50%;
   border: 4px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  @media (max-width: 767px) {
+    width: 10vw;
+  }
 }
 
 .groupDetails {
@@ -69,6 +100,10 @@
   margin-top: 30px;
   text-align: center;
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+
+  @media   (max-width: 767px) {
+    width: 80vw;     
+   }
 }
 
 .groupDetails h2 {
@@ -91,6 +126,9 @@
   margin-top: 20px;
   text-align: center;
   width: 100%;
+  @media   (max-width: 767px) {
+    width: 85vw;     
+   }
 }
 
 .post {
@@ -197,6 +235,10 @@
   padding: 10px;
   width: 30vh;
   font-size: $smaller;
+
+  @media   (max-width: 767px) {
+    width: 20vh;     
+   }
 }
 
 .commentHeader {
