user pagination, login page, comment deletion

--- a/client/src/pages/GroupPage/GroupPage.module.scss
+++ b/client/src/pages/GroupPage/GroupPage.module.scss
@@ -2,50 +2,47 @@
 
 .groupContainer {
   display: flex;
-  flex-direction: column;
-  // background: $background-body;
-  // padding: 20px 30px;
+  flex-direction: column; 
   width: 99%;
   box-sizing: border-box;
-  border-radius: 15px;
-  // box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+  border-radius: 15px;  
   position: relative; 
 }
 
 .groupHeader {
   display: flex;
-  flex-wrap: nowrap; /* Забороняємо перенесення елементів */
+  flex-wrap: nowrap; 
   gap: 10px;
-  overflow-x: auto; /* Додаємо горизонтальну прокрутку */
-  width: 50vw; /* Встановлюємо ширину */
-  height: 35vh; /* Фіксована висота */
+  overflow-x: auto; 
+  width: 50vw; 
+  height: 35vh; 
   margin-bottom: 50px;
   padding: 20px 10px;
   margin: 0 auto;
 
-  /* Стилізація скролу */
-  scrollbar-width: thin; /* Тонкий скрол для Firefox */
-  scrollbar-color: #888 transparent; /* Колір для Firefox */
+  
+  scrollbar-width: thin;
+  scrollbar-color: $eleventh transparent; 
 
   &::-webkit-scrollbar {
-    height: 8px; /* Висота скролу */
+    height: 8px;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: #888; /* Колір скролу */
+    background-color: $eleventh; 
     border-radius: 10px;
   }
 
   &::-webkit-scrollbar-thumb:hover {
-    background-color: #555; /* Колір при наведенні */
+    background-color: $secondary; 
   }
 
   &::-webkit-scrollbar-track {
-    background: transparent; /* Прозорий фон доріжки */
+    background: transparent; 
   }
 
   @media (max-width: 767px) {
-    width: 30vh; /* Для мобільних пристроїв */   
+    width: 30vh; 
     height: 25vh;
     margin: 5px;
   }
@@ -74,9 +71,7 @@
 }
 
 .groupLink h2 { 
-  font-size: $larger;
-  // text-shadow: 0 0 10px rgba(255, 255, 255, 0.7),
-    // 0 0 20px rgba(255, 255, 255, 0.5);
+  font-size: $larger;  
   margin-bottom: 15px;
 }
 
@@ -109,8 +104,7 @@
 .groupDetails h2 {
   font-size: $extra-large;
   font-weight: $font-weight-medium;
-  margin: 30px;
-  // color: $sunglow-600;
+  margin: 30px; 
   text-shadow: 0 0 20px rgba(255, 255, 255, 0.7),
     0 0 40px rgba(255, 255, 255, 0.5);
 }
@@ -266,20 +260,25 @@
 
 }
 
-.editButton {
-  background-color: #4caf50;
-  color: white;
-  margin-right: 10px;
+// .editButton {
+//   background-color: #4caf50;
+//   color: white;
+//   margin-right: 10px;
+// }
+
+.postActions {
+  display: flex;
+justify-content: end;
 }
 
 .deleteButton {
-  background-color: #f44336;
-  color: white;
+  background-color: $background-btn-secondary;
+  color: $primary;
+  padding: 5px 10px;
+  border-radius: 10px;
 }
 
 .commentDate {
-  // display: flex;
-  // justify-content: flex-end;
   font-size: $small;
   color: $seventh;
 }
