--- a/client/src/pages/UsersPage/UsersPage.module.scss
+++ b/client/src/pages/UsersPage/UsersPage.module.scss
@@ -1,5 +1,11 @@
 @use "../../App.scss" as *;
 
+
+.usersContainer{
+  display: flex;
+  flex-direction: column;
+
+}
 .userBox {
   display: flex;
   flex-wrap: wrap;
