--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -8,9 +8,50 @@
   // overflow: hidden;
   // padding-right: 50px;
   top: 0; 
-  left: 5px;
+  left: 0;
   z-index: 100; 
+  display: flex;
+  @media (max-width: 768px) {
+
+    position:static;
+  }
 }
+
+
+
+
+.headerNav {
+  // display: none;
+  flex-direction: column;
+  gap: 15px;
+
+  // &.open {
+  //   display: flex;
+  // }
+
+  @media (min-width: 768px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+}
+
+.burgerButton {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 101;
+
+  @media (max-width: 768px) {
+    display: block;
+  }
+}
+
+
+
+
 .shinyCta{
   border-radius: $border-radius-large;
 }
@@ -30,6 +71,9 @@ header {
     font-weight: $font-weight-bold;
     cursor: pointer;
     animation: gradientMove 3s infinite;    
+    @media (max-width: 768px) {
+  text-align: center;
+    }
   }
 
   
@@ -49,11 +93,15 @@ header {
   .radioBtn {
     width: 80px;
     height: 26px;
-    background: $background-secondary;
+    // background: $background-secondary;
     position: relative;
     border-radius: 50px;
     box-shadow: inset 0 1px 1px rgba(128, 125, 125, 0.5), 0 1px 0 rgba(104, 133, 130, 0.2);
+    
+    @media (max-width: 768px) {
 
+    display:none;
+    }
     &:after {
       content: 'UA';
       color: $secondary;
@@ -135,6 +183,12 @@ header {
     }
     
   }
+  .headerSlogan{
+    @media   (max-width: 768px) {
+display: none;
+      
+     }
+  }
 
   .header {
     display: flex;
@@ -151,12 +205,11 @@ header {
     gap: $padding-medium;
     padding: $padding-medium;
     box-sizing: border-box;
-
-    // @media (min-width: 768px) {
-    //   flex-direction: row;
-    //   justify-content: space-between;
-    //   gap: 30px;
-    // }
+    @media (max-width: 768px) {
+    padding: 0;
+    gap: 0;
+    }
+ 
   }
 
   .imgLogo {
@@ -177,13 +230,15 @@ header {
     box-sizing: border-box;
 
     @media (min-width: 768px) {
-      padding: $padding-large;
+      // padding: $padding-large;
     }
 
   }
 
   .headerNav {
-    display: flex;
+
+    display:no;
+    // display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 15px;
@@ -200,7 +255,7 @@ header {
   position: relative;
   opacity: 0.8;
 
-  @media (max-width: 767px) {
+  @media (max-width: 768px) {
     display: none;
   }
   
@@ -245,27 +300,30 @@ header {
       color: $primary;; /* Цвет текста */
 }
 
+
 .searchContainer {
   position: relative; /* Required for absolute positioning of the child */
   display: flex;
 
 
-  @media (max-width: 767px) {
+  @media (max-width: 768px) {
     flex-direction: column;
     align-items: center;
   }
 }
 
+
 .menuForm {
   padding: $padding-large $padding-medium;
-  width: 80%;
+  width: 90%;
   margin-left: $margin-medium;
   border-radius: $border-radius-medium-big;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 30px;
 
-  @media (min-width: 768px) {
+  @media (min-width: 769px) {
     display: none;
   }
 }
@@ -278,10 +336,12 @@ header {
 a {
   cursor: pointer;
 } 
-
-.select {
-  width: 100%;
-  max-width: 300px; // Limit max width for better alignment
+.selectForm option{
+  background-color: #131212;
+}
+.selectForm {
+  width: 70%;
+  // max-width: 300px; // Limit max width for better alignment
   padding: $padding-small; // Add padding for better spacing
   border-radius: $border-radius-medium; // Rounded corners
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); // Subtle shadow for depth
@@ -301,7 +361,7 @@ a {
     background-color: $nodle-black-0; // Match input background
 
     &--is-focused {
-      border-color: $stem-green-500; // Focused state styling
+      // border-color: $stem-green-500; // Focused state styling
       box-shadow: 0 0 0 2px rgba($stem-green-500, 0.3); // Focus shadow effect
     }
   }
@@ -315,43 +375,125 @@ a {
     }
     .react-select__dropdown-indicator {
       transform: rotate(0deg); // Normal arrow rotation
+      color:#131212;
     }
   }
 
-  .react-select__menu {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); // Menu shadow for depth
-    border-radius: $border-radius-medium; // Rounded corners for the menu
-    background-color: $nodle-black-100; // Dropdown background
-  }
 
-  .react-select__option {
-    padding: $padding-small;
-    cursor: pointer; // Pointer on hover
-    transition: background-color 0.2s ease, color 0.2s ease; // Smooth transitions
 
-    &:hover {
-      background-color: $nodle-black-300; // Hover effect
-      color: $nodle-black-0; // White text on hover
-    }
 
-    &--is-selected {
-      background-color: $stem-green-500; // Highlight selected option
-      color: $nodle-black-0; // White text on selected
-    }
-  }
 
-  .react-select__input {
-    padding: $padding-small;
-    font-size: 1rem; // Input text size
-    color: $nodle-black-500; // Text color
-  }
 
-  // Responsiveness for small screens
-  @media (max-width: 767px) {
-    width: 100%;
-    max-width: none; // Allow the select to take up the full width
-  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
+//   .react-select__menu {
+//     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); // Menu shadow for depth
+//     border-radius: $border-radius-medium; // Rounded corners for the menu
+//     // background-color: $nodle-black-100; // Dropdown background
+//   }
+
+//   .react-select__option {
+//     padding: $padding-small;
+//     color: #131212;
+//     cursor: pointer; // Pointer on hover
+//     transition: background-color 0.2s ease, color 0.2s ease; // Smooth transitions
+
+//     &:hover {
+//       background-color: $nodle-black-300; // Hover effect
+//       color: $nodle-black-0; // White text on hover
+//     }
+
+//     &--is-selected {
+//       background-color: $stem-green-500; // Highlight selected option
+//       .searchContainer {
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//         padding: 16px;
+//         background-color: #ffffff;
+//         border: 1px solid #e0e0e0;
+//         border-radius: 12px;
+//         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+//     }
+    
+//     .menuForm {
+//         width: 100%;
+//         max-width: 500px;
+//         display: flex;
+//         flex-direction: column;
+//         gap: 12px;
+//         color: #131212;
+//     }
+    
+//     .selectForm {
+//         width: 100%;
+//         font-size: 16px;
+//         border-radius: 8px;
+//         border: 1px solid #cccccc;
+//         padding: 8px;
+//         transition: border-color 0.3s;
+//         color: #131212;
+//         background-color: aqua;
+    
+//         &:focus {
+//             border-color: #007bff;
+//             outline: none;
+//             box-shadow: 0 0 4px rgba(0, 123, 255, 0.4);
+//         }
+//     }
+//     ; // White text on selected
+//     }
+//   }
+
+//   .react-select__input {
+//     padding: $padding-small;
+//     font-size: 1rem; // Input text size
+//     color: $nodle-black-500; // Text color
+//   }
+
+//   // Responsiveness for small screens
+//   @media (max-width: 767px) {
+//     width: 100%;
+//     max-width: none; // Allow the select to take up the full width
+//   }
+// }
 
 
 
@@ -387,11 +529,7 @@ a {
 //   }
 // }
 
-.menuForm input {
-  width: 95%;
-  padding: $padding-large $padding-small;
-  cursor: pointer;
-}
+
 
 
 
