--- a/client/src/components/RightSidebar/RightSidebar.module.scss
+++ b/client/src/components/RightSidebar/RightSidebar.module.scss
@@ -96,9 +96,9 @@
 }
 
 .friendsTitle {
-  position: sticky;
-  top: 0; 
-  z-index: 10; 
+  // position: sticky;
+  // top: 0; 
+  // z-index: 10; 
   padding: $padding-small 0;
   margin-top: 0;
   font-size: 1.5rem; 
