--- a/client/src/pages/ChatPage/ChatPage.module.scss
+++ b/client/src/pages/ChatPage/ChatPage.module.scss
@@ -2,10 +2,12 @@
 
 .ChatBox{
   display: flex;
+  
   border-radius: $border-radius-medium-big;
 // width: 90vw;
   @media (max-width: 768px) {
-    height:  70vh;
+    height: 77vw;
+    overflow-y: hidden;
    
   }
 }
@@ -100,6 +102,11 @@ form {
   gap: 10px;
   border-radius: $border-radius-medium-big;
   overflow-y: auto;
+  @media (max-width: 768px) {
+    height:  45vh;
+
+   
+  }
 }
 
 
