--- a/client/src/pages/LoginPage/LoginPage.module.scss
+++ b/client/src/pages/LoginPage/LoginPage.module.scss
@@ -106,7 +106,7 @@
 }
 
 .loginBox {
-  width: 100vw;
+  // width: 100vw;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -120,6 +120,8 @@
   margin-left: -15px;
   z-index: 200;
 }
+
+
 .wrapper {
   position: relative;
   max-width: 470px;
@@ -138,7 +140,7 @@
   align-items: center;
   position: absolute;
   left: 50%;
-  bottom: -86%;
+  bottom: -88%;
   transform: translateX(-50%);
   width: calc(25% + 425px);
   padding: 0 140px;
@@ -148,11 +150,16 @@
   transition: all 0.6s ease;
   color: $primary;
   border: 7px solid $eighth;
+  width: 400px; 
 }
 .wrapper.active .form.login {
-  bottom: -15%;
+  bottom: -16%;
+
   border-radius: 26%;
   box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
+  @media (max-width: 768px) {
+    width: 50vw;          
+  }
 }
 .form header {
   font-size: $extra-large;
