--- a/client/src/pages/NewsPage/NewsPage.module.scss
+++ b/client/src/pages/NewsPage/NewsPage.module.scss
@@ -1,5 +1,13 @@
 @use "../../App.scss" as *;
 
+
+
+.NewsBox{
+width: 80vw;
+display: flex;
+
+}
+
 .news-page {
   padding: $padding-large;
   height: 100%;
@@ -19,6 +27,7 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  padding: 10px;
 
   @media (min-width: 768px) {
     flex-direction: row;
@@ -27,6 +36,7 @@
 }
 
 .news-detail__image {
+  padding: 10px;
   max-width: 400px;
   width: 100%;
   height: auto;
@@ -34,7 +44,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
   @media (max-width: 767px) {
-    max-width: 70%;
+    max-width: 150px;
   }
 }
 
@@ -45,6 +55,8 @@
   width: 100%;
 
   @media (max-width: 1024px) {
+    margin-top: 50px;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -55,7 +67,7 @@
 }
 
 .news-detail__text-container {
-  max-width: 600px;
+  max-width: 70vw;
   width: 100%;
 
   @media (max-width: 767px) {
