--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -176,8 +176,7 @@ $large-screen-breakpoint: 1440px;
 // __________________________________________\\
 
 .container {
-  display: flex; 
-  // gap: 10px;  
+  display: flex;  
   width: 100vw;
   position: relative;
   flex-direction: column;  
@@ -188,6 +187,7 @@ $large-screen-breakpoint: 1440px;
   align-items: center;
   position: relative;
   width: 100%;
+  height: 100%;
   @media   (max-width: 768px) {
 
   
@@ -197,22 +197,10 @@ $large-screen-breakpoint: 1440px;
 .innerBox {
   display: flex;
   justify-content: flex-end;
-
-  // flex-direction: column;
-  position: relative;
-  // gap: 10px;
+ position: relative;
   width: 100%;
-  height: 85vh;
+  height: 100%;
   padding: 10px;
-
-  // @media (min-width: 769px) and (max-width: 1030px) {
-  //   display: flex;
-  //   position: relative;
-  //   flex-direction: column;
-  //   align-items:flex-end;
-  //   justify-content: flex-start;
-  // }
-
 
     @media   (max-width: 768px) {
       box-sizing: border-box;
@@ -232,13 +220,13 @@ $large-screen-breakpoint: 1440px;
   width: 11%;
   gap: 10px;
   position: fixed;
-  top: 140px;
+  top: 123px;
   left: 0;
   // position: relative;  
   z-index: 100;
   padding-right: 20px;
   @media (min-width: 769px) and (max-width: 1030px) {
-    top: 183px;
+    top: 163px;
   }
   @media   (max-width: 768px) {
     display: none;
