--- a/client/src/components/MainContent/MainContent.module.scss
+++ b/client/src/components/MainContent/MainContent.module.scss
@@ -7,7 +7,8 @@
   justify-content: center;
   border-radius: $border-radius-medium-big;
   width: 99%;
-  height: 100%;
+  // height: 100%;
+  // height: 80vh;
   padding: 0 $padding-medium;
   overflow-y: auto;
   overflow-x: hidden;
