--- a/client/src/pages/ChatPage/ChatPage.module.scss
+++ b/client/src/pages/ChatPage/ChatPage.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   
   border-radius: $border-radius-medium-big;
-// width: 90vw;
+width: 99%;
   @media (max-width: 768px) {
     height: 77vw;
     overflow-y: hidden;
