--- a/client/src/pages/GroupPage/GroupPage.module.scss
+++ b/client/src/pages/GroupPage/GroupPage.module.scss
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   border-radius: 15px;  
   position: relative; 
+
 }
 
 .groupHeader {
@@ -42,9 +43,9 @@
   }
 
   @media (max-width: 767px) {
-    width: 30vh; 
+    width: 50vh; 
     height: 25vh;
-    margin: 5px;
+   
   }
 }
 
@@ -96,8 +97,8 @@
   text-align: center;
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
 
-  @media   (max-width: 767px) {
-    width: 80vw;     
+  @media   (max-width: 768px) {
+    width: 92%;     
    }
 }
 
