changing styles for the project for adaptive

--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -9,10 +9,10 @@
 
 
 
-  // display: flex;
-  // @media (max-width: 768px) {
-  //   position:static;
-  // }
+  display: flex;
+  @media (max-width: 768px) {
+   width: 99%;
+  }
 }
 
 
