--- a/client/src/pages/ProfilePage/PhotoLibrary/PhotoLibrary.module.scss
+++ b/client/src/pages/ProfilePage/PhotoLibrary/PhotoLibrary.module.scss
@@ -43,6 +43,12 @@
         max-height: 350px;
     
       }
+      @media (max-width: 425px) {
+        width: 250px;
+    
+        max-height: 200px;
+    
+      }
     }
   }
 
