--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -189,7 +189,9 @@ $large-screen-breakpoint: 1440px;
   width: 100%;
   height: 100%;
   @media   (max-width: 768px) {
-
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
   
 }
 
