--- a/client/src/components/MainContent/MainContent.module.scss
+++ b/client/src/components/MainContent/MainContent.module.scss
@@ -15,8 +15,15 @@
   background-color: $background-secondary;
   padding: 10px;
   @media   (max-width: 768px) {
-// padding: 10px;
-display: flex;
+
+width: 98%;
+
+  
+}
+  @media   (max-width: 425px) {
+
+width: 96%;
+
   
 }
 }
