--- a/client/src/pages/ChatPage/ChatPage.module.scss
+++ b/client/src/pages/ChatPage/ChatPage.module.scss
@@ -1,32 +1,29 @@
 @use "../../App.scss" as *;
 
-.ChatBox{
+.ChatBox {
   display: flex;
-  
   border-radius: $border-radius-medium-big;
-width: 99%;
+  width: 99%;
   @media (max-width: 768px) {
-    height: 77vw;
+    height: 60vw;
     overflow-y: hidden;
-   
+  }
+  @media (max-width: 425px) {
+    height:110vw;
+    overflow-y: hidden;
   }
 }
 
-.ChatSidebar{
+.ChatSidebar {
   display: flex;
   flex-direction: column;
   width: 30%;
   height: 80vh;
   gap: 20px;
   @media (max-width: 768px) {
-    height:  70vh;
-   
+    height: 70vh;
   }
- 
 }
-
-
-
 
 /* Общие стили для формы */
 form {
@@ -34,7 +31,6 @@ form {
   flex-direction: column;
   gap: 10px;
   width: 97%;
-  
 }
 
 /* Стили для контейнера поля Select */
@@ -52,7 +48,6 @@ form {
   }
 
   .react-select__value-container {
-    // padding: 5px;
     font-size: $normal;
   }
 
@@ -95,7 +90,7 @@ form {
   }
 }
 
-.ChatUsersBox{
+.ChatUsersBox {
   padding: $padding-medium;
   height: 100%;
   border: 1px solid #5f5e5e;
@@ -103,34 +98,33 @@ form {
   border-radius: $border-radius-medium-big;
   overflow-y: auto;
   @media (max-width: 768px) {
-    height:  45vh;
-
-   
+    height: 45vh;
   }
 }
 
-
-/* Стили для каждого пользователя */
 .ChatUser {
   display: flex;
   margin-bottom: $margin-medium;
   align-items: center;
   gap: 10px;
   padding: 8px;
-  // border: 1px solid #5f5e5e;
   border-radius: $border-radius-small;
-  background-color:$secondary;
+  background-color: $secondary;
   height: 100%;
   transition: background-color 0.2s ease, transform 0.2s ease;
-  
-  
+  @media (max-width: 425px) {
+   display: flex;
+   flex-direction: column;
+  }
+
+
+
   &.selected {
-      background-color:$background-btn-fifth; /* Выделение выбранного пользователя */
-      border: 2px solid $background-thirteenth; /* Например, синяя полоска слева */
-    }
+    background-color: $background-btn-fifth; /* Выделение выбранного пользователя */
+    border: 2px solid $background-thirteenth; /* Например, синяя полоска слева */
+  }
 
   &:hover {
-   
     transform: scale(1.02);
   }
 
@@ -146,11 +140,10 @@ form {
     font-size: $smaller;
     font-weight: $font-weight-medium;
     color: $primary;
-    word-break: break-word; /* Чтобы длинные имена не ломали верстку */
+    word-break: break-word; 
   }
 }
 
-/* Стили для пустого списка */
 .ChatUsers:empty {
   text-align: center;
   color: $secondary;
@@ -158,7 +151,7 @@ form {
   padding: $padding-large;
 }
 
-.ChatMessage{
+.ChatMessage {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -166,4 +159,3 @@ form {
   width: 100%;
   padding: $padding-medium $padding-large;
 }
-
