--- a/client/src/pages/GroupPage/GroupPage.module.scss
+++ b/client/src/pages/GroupPage/GroupPage.module.scss
@@ -100,6 +100,9 @@
   @media   (max-width: 768px) {
     width: 92%;     
    }
+  @media   (max-width: 425px) {
+    width: 85%;     
+   }
 }
 
 .groupDetails h2 {
@@ -136,6 +139,9 @@
   margin-bottom: 10px;
   color: $fourth;
   margin-bottom: 40px;
+  @media   (max-width: 425px) {
+    width: 80%;     
+   }
 }
 
 .post p {
