--- a/client/src/pages/UserPage/UserPage.module.scss
+++ b/client/src/pages/UserPage/UserPage.module.scss
@@ -12,7 +12,9 @@
   border-radius: 18px;
   backdrop-filter: blur(10px);
   box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
-
+  @media (max-width: 768px) {
+   height: auto;
+  }
 
   &_title {
     font-size: 2.5rem;
@@ -46,6 +48,7 @@
   @media (max-width: 768px) {
     flex-direction: column;
     gap: 25px;
+    height: 85vh;
   }
 }
 
