--- a/client/src/pages/FriendsPage/FriendsPage.module.scss
+++ b/client/src/pages/FriendsPage/FriendsPage.module.scss
@@ -1,11 +1,8 @@
 @use "../../App.scss" as *;
 
-
-.friendsBox{
-display: flex;
-flex-direction: column;
-
-
+.friendsBox {
+  display: flex;
+  flex-direction: column;
 }
 .friendBox {
   display: flex;
@@ -14,15 +11,10 @@ flex-direction: column;
   padding: 0 20px;
   justify-content: space-between;
 
-  // @media (max-width: 768px) {
-  //   width: 85vh;
-  //   height: 180px;
-  // }
-
   @media (max-width: 768px) {
-    flex-direction: column; /* Stack items vertically */
-    align-items: center;    /* Center items horizontally */
-    gap: 20px;              /* Adjust the gap between cards */
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
   }
 }
 
@@ -39,15 +31,10 @@ flex-direction: column;
     width: 45%;
   }
 
-  // @media (max-width: 768px) {
-  //   width: 100%;
-  //   height: 180px;
-  // }
-
   @media (max-width: 768px) {
-    width: 100%; /* Reduce the width to fit nicely on small screens */
-    max-width: 400px; /* Set a maximum width for better scaling */
-    height: 200px; /* Adjust the height dynamically */
+    width: 100%;
+    max-width: 400px;
+    height: 200px;
   }
 
   &.flipped {
@@ -202,4 +189,3 @@ flex-direction: column;
     font-size: $smaller;
   }
 }
-
