--- a/client/src/components/ButtonDeleteFriend/ButtonDeleteFriend.module.scss
+++ b/client/src/components/ButtonDeleteFriend/ButtonDeleteFriend.module.scss
@@ -3,10 +3,9 @@
 .btn {
   background-color: $background-btn-secondary;
   color: $primary;
-  border: none;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
+  border: none; 
+  padding: 10px 15px;
+  border-radius: 20%;
   font-size: $font-size-small-medium;
   display: flex;
   justify-content: center;
