--- a/client/src/pages/UserPage/UserPage.module.scss
+++ b/client/src/pages/UserPage/UserPage.module.scss
@@ -13,7 +13,7 @@
   backdrop-filter: blur(10px);
   box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
   @media (max-width: 768px) {
-   height: auto;
+    height: auto;
   }
 
   &_title {
@@ -27,8 +27,7 @@
   }
   @media (max-width: 767px) {
     width: 94vw;
-
-    }
+  }
 }
 
 .userContent {
@@ -54,8 +53,8 @@
 
 .userPhotoContainer {
   width: 350px;
-  height:500px;
-  overflow: hidden; /* Скрывает лишние части изображения */
+  height: 500px;
+  overflow: hidden;
   border-radius: $border-radius-medium-big;
   border: 3px solid #8e9aaf;
   box-shadow: 0 0 10px rgba(138, 174, 255, 0.6);
@@ -68,7 +67,7 @@
   img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Полное заполнение контейнера */
+    object-fit: cover;
   }
 }
 
