--- a/client/src/pages/SolarSystemPage/SolarSystem.module.scss
+++ b/client/src/pages/SolarSystemPage/SolarSystem.module.scss
@@ -120,6 +120,7 @@
   overflow: hidden;
   background: black;
   height: 85vh;
+  width: 99%;
   font-family: "Montserrat", sans-serif;
 }
 .solarBox .logo {
